--- a/config/samples/operators_v1alpha1_helmrelease.yaml
+++ b/config/samples/operators_v1alpha1_helmrelease.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.alexeldeib.xyz/v1alpha1
 kind: HelmRelease
 metadata:
-  name: helmrelease-sample
+  name: nginx
 spec:
   # Add fields here
-  foo: bar
+  chart: stable/nginx-ingress
